Bug 88287; add blocking style GetDataSource method so callers can ensure they use an already registered data source; r=sgehani, sr=waterson